css/web3berlin.webflow.css
/* ... */
@media screen and (max-width: 479px) {
  body {
    --font-family--noto-sans-mono: "Noto Sans Mono", sans-serif;
    --heading--h1: 5rem;
    --heading--h2: 3.75rem;
    --heading--h3: 3rem;
    --heading--h4: 2rem;
    --heading--h5: 1.4rem;
    --heading--h6: 1.1rem;
    --spacing--s: 1.7rem;
    --border-radius--tiny: .75rem;
    --spacing--md: 5rem;
    --spacing--xxs: .4rem;
    --text-size--medium: 1.25rem;
    --spacing--xs: .8rem;
    --container--medium: 80rem;
    --border-radius--rounded: 999rem;
    --spacing--xl: 7rem;
    --text-size--tiny: .9rem;
    --text-size--small: 1.1rem;
    --text-size--large: 1.5rem;
    --container--large: 100rem;
    --container--small: 50rem;
    --page-padding--desktop: 4rem;
    --page-padding--tablet: 6vw;
    --project--nav-height: 5rem;
    --border-radius--small: .75rem;
    --spacing--ms: 3.3rem;
    --spacing--tiny: .9rem;
    --relume-library-lite--white: white;
    --relume-library-lite--rl-gray: #f4f4f4;
    --relume-library-lite--rl-white: white;
    --relume-library-lite--rl-black: black;
    --relume-library-lite--grey: #e4e2df;
    --border-radius--large: 4rem;
    --border-radius--medium: 2.5rem;
    --heading--extra-large: 6rem;
    --container--tiny: 32rem;
    --project--scroll-animation-radius: 10rem;
  }

  .heading-style-h2 {
    font-size: var(--heading--h2);
    word-break: normal;
  }

  .button {
    font-size: 1.1rem;
  }

  .page-wrapper {
    position: relative;
  }

  .navbar-inner {
    padding-left: 1rem;
    padding-right: 1rem;
  }

  .hero-component {
    min-height: 80vh;
  }

  .hero-gradient {
    background-image: linear-gradient(90deg, #000000b0, #0000008a 47%, #00000063 81%, var(--_colors---color--transparent));
  }

  .team-item {
    margin-bottom: var(--page-padding--tablet);
    width: 100%;
  }

  .team-item-text-wrapper {
    padding-bottom: var(--spacing--s);
  }

  .team-item-name {
    padding-bottom: .2rem;
  }

  .footer {
    border-top-width: .8px;
    height: auto;
    display: block;
    position: static;
    bottom: 0;
  }

  .projects-item {
    padding: 2rem;
  }

  .black-white-image.project-image {
    max-width: 16rem;
  }

  .footer-item {
    height: var(--project--nav-height);
    border: .8px solid #000;
  }

  .spacer-footer {
    display: none;
  }

  .nav-text-wrapper {
    grid-column-gap: .3rem;
    grid-row-gap: .3rem;
    flex-flow: column;
  }

  .heading-smaller-on-mobile {
    font-size: var(--heading--h2);
  }

  .burger-icon-wrapper {
    margin-top: 2px;
    margin-bottom: 2px;
  }

  .burger-icon-wrapper.w--open {
    justify-content: center;
    align-items: center;
    margin-top: 1px;
    display: flex;
  }
}

@media screen and (max-width: 991px) {
  #w-node-_00dc33f2-bf34-926c-1ae3-e037b2a01449-df33ac17, #w-node-ce5b8cbc-c45b-6c96-a714-c8ad3d45cf9b-df33ac17 {
    grid-area: span 1 / span 2 / span 1 / span 2;
  }
}

